--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
     "express-hbs": "^2.4.0",
+    "fileupload": "^0.2.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
